chore: improve pattern and update category example relation
